Сategory section created

--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
                                     <div class="item__text">
                                         <a href="#">J-45 Standard</a>
                                     </div>
-                                    <div class="item__cash">
-                                        <p>$1,699.00</p>
-                                    </div>
+                                    <div class="item__cash">$1,699.00</div>
                                 </div>
                             </div>
                             <div class="store__item">
@@ -159,6 +157,47 @@
                     </div>
                 </div>
             </section>
+            <section class="page__category category">
+                <div class="category__container">
+                    <div class="category__title section__title">
+                        <h2>Choose based on <span>Categories</span></h2>
+                    </div>
+                    <div class="category__items">
+                        <a href="#" class="category__item">
+                            <div class="category__img">
+                                <img src="/assets/img/categories/01.jpg" alt="Acoutic guitar">
+                            </div>
+                            <div class="category-item__title">Acoustic</div>
+                        </a>
+                        <a href="#" class="category__item">
+                            <div class="category__img">
+                                <img src="/assets/img/categories/02.jpg" alt="Acoutic guitar">
+                            </div>
+                            <div class="category-item__title">Electric</div>
+                        </a>
+                        <a href="#" class="category__item">
+                            <div class="category__img">
+                                <img src="/assets/img/categories/03.jpg" alt="Acoutic guitar">
+                            </div>
+                            <div class="category-item__title">Basses</div>
+                        </a>
+                        <a href="#" class="category__item">
+                            <div class="category__img">
+                                <img src="/assets/img/categories/04.jpg" alt="Acoutic guitar">
+                            </div>
+                            <div class="category-item__title">Collections</div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+            <section class="page__category category">
+                <div class="category__container">
+                    <div class="category__title section__title">
+                        <h2>Featuring the Best <span>Brands</span></h2>
+                    </div>
+                </div>
+            </section>
+            
         </main>
         
         <footer id="footer">
