feature section created

--- a/index.html
+++ b/index.html
@@ -190,14 +190,23 @@
                     </div>
                 </div>
             </section>
-            <section class="page__category category">
-                <div class="category__container">
-                    <div class="category__title section__title">
+            <section class="page__feature feature">
+                <div class="feature__container">
+                    <div class="feature__title section__title">
                         <h2>Featuring the Best <span>Brands</span></h2>
+                    </div>
+                    <div class="feature__content">
+                        <div class="feature__brand"><img src="/assets/img/brands/gibsun.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/gretsch.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/ibanez.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/jakamine.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/martin&go.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/seagull.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/taylor.svg"></img></div>
+                        <div class="feature__brand"><img src="/assets/img/brands/tender.svg"></img></div>
                     </div>
                 </div>
             </section>
-            
         </main>
         
         <footer id="footer">
