Added features section (html) / Added features section styles (css)

--- a/index.html
+++ b/index.html
@@ -207,6 +207,30 @@
                     </div>
                 </div>
             </section>
+            <section class="peculiarities">
+                <div class="peculiarities__container">
+                    <div class="peculiarities__title section__title">
+                        <h2>Why try <span>Rhythm?</span></h2>
+                    </div>
+                    <div class="peculiarities__items">
+                        <div class="peculiarities__item">
+                            <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/01.svg" alt=""></div>
+                            <div class="peculiarities-item__title">Smooth Browsing</div>
+                            <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        </div>
+                        <div class="peculiarities__item">
+                            <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/02.svg" alt=""></div>
+                            <div class="peculiarities-item__title">EASY Delivery</div>
+                            <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        </div>
+                        <div class="peculiarities__item">
+                            <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/03.svg" alt=""></div>
+                            <div class="peculiarities-item__title">SwiFT PAYMENTS</div>
+                            <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         
         <footer id="footer">
