Added peculiarities section (html) / Added peculiaritiess section styles (css)

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                     </div>
                 </div>
             </section>
-            <section class="peculiarities">
+            <section class="page__peculiarities peculiarities">
                 <div class="peculiarities__container">
                     <div class="peculiarities__title section__title">
                         <h2>Why try <span>Rhythm?</span></h2>
@@ -227,6 +227,24 @@
                             <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/03.svg" alt=""></div>
                             <div class="peculiarities-item__title">SwiFT PAYMENTS</div>
                             <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page__slider slider">
+                <div class="slider__container">
+                    <div class="slider__title section__title">
+                        <h2>What our <span> customer’s </span> say</h2>
+                    </div>
+                    <div class="slider__item">
+                        <div class="slider__img"><img src="/assets/img/costumers/costumer1.png" alt="Photo Author"></div>
+                        <div class="slider__content">
+                            <p class="slider__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</p>
+                            <div class="slider__author">
+                                <div class="author__name">Ryan Wels</div>
+                                <div class="author__skill">PROFESSIONAL GUITARIST</div>
+                            </div>
+                            <div class="slider__buttons"></div>
                         </div>
                     </div>
                 </div>
