Added peculiarities section (html) / Added peculiaritiess section styles (css)

--- a/index.html
+++ b/index.html
@@ -249,6 +249,21 @@
                     </div>
                 </div>
             </section>
+            <section class="page__download download">
+                <div class="download__container">
+                    <div class="download__content">
+                        <div class="download__title">Browse and buy your <span>favorite guitars</span> with Rhythm.</div>
+                        <div class="download__app">
+                            <a href="#" class="download-app__img"><img src="./assets/img/platforms/google-play-store.png" alt="GooglePlay"></a>
+                            <a href="#" class="download-app__img"><img src="./assets/img/platforms/app-store.png" alt="AppleStore"></a>
+                        </div>
+                    </div>
+                    <div class="download__review">
+                        <div class="review__img review-1"><img src="assets/img/mobile-img/guitar s3.jpg" alt="Review 1"></div>
+                        <div class="review__img review-2"><img src="assets/img/mobile-img/guitar s1.jpg" alt="Review 2"></div>
+                    </div>
+                </div>
+            </section>
         </main>
         
         <footer id="footer">
