--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="main__design design">
                         <div class="design__inner">
-                            <img src="/assets/img/design.jpg" alt="Design Photo">
+                            <img src="assets/img/design.jpg" alt="Design Photo">
                         </div>       
                     </div>
                 </div>
@@ -68,7 +68,7 @@
     
                             <div class="store__item">
                                 <div class="item__img">
-                                    <a href="#"><img src="/assets/img/items/01.png" alt="guitar"></a>
+                                    <a href="#"><img src="assets/img/items/01.png" alt="guitar"></a>
                                 </div>
                                 <div class="item__info">
                                     <div class="item__text">
@@ -81,7 +81,7 @@
                             </div>
                             <div class="store__item">
                                 <div class="item__img">
-                                    <a href="#"><img src="/assets/img/items/02.png" alt="guitar"></a>
+                                    <a href="#"><img src="assets/img/items/02.png" alt="guitar"></a>
                                 </div>
                                 <div class="item__info">
                                     <div class="item__text">
@@ -92,7 +92,7 @@
                             </div>
                             <div class="store__item">
                                 <div class="item__img">
-                                    <a href="#"><img src="/assets/img/items/03.png" alt="guitar"></a>
+                                    <a href="#"><img src="assets/img/items/03.png" alt="guitar"></a>
                                 </div>
                                 <div class="item__info">
                                     <div class="item__text">
@@ -117,7 +117,7 @@
                         
                             <div class="store__item">
                                 <div class="item__img">
-                                    <a href="#"><img src="/assets/img/items/04.png" alt="guitar"></a>
+                                    <a href="#"><img src="assets/img/items/04.png" alt="guitar"></a>
                                 </div>
                                 <div class="item__info">
                                     <div class="item__text">
@@ -130,7 +130,7 @@
                             </div>
                             <div class="store__item">
                                 <div class="item__img">
-                                    <a href="#"><img src="/assets/img/items/05.png" alt="guitar"></a>
+                                    <a href="#"><img src="assets/img/items/05.png" alt="guitar"></a>
                                 </div>
                                 <div class="item__info">
                                     <div class="item__text">
@@ -143,7 +143,7 @@
                             </div>
                             <div class="store__item">
                                 <div class="item__img">
-                                    <a href="#"><img src="/assets/img/items/06.png" alt="guitar"></a>
+                                    <a href="#"><img src="assets/img/items/06.png" alt="guitar"></a>
                                 </div>
                                 <div class="item__info">
                                     <div class="item__text">
@@ -166,25 +166,25 @@
                     <div class="category__items">
                         <a href="#" class="category__item">
                             <div class="category__img">
-                                <img src="/assets/img/categories/01.jpg" alt="Acoutic guitar">
+                                <img src="assets/img/categories/01.jpg" alt="Acoutic guitar">
                             </div>
                             <div class="category-item__title">Acoustic</div>
                         </a>
                         <a href="#" class="category__item">
                             <div class="category__img">
-                                <img src="/assets/img/categories/02.jpg" alt="Acoutic guitar">
+                                <img src="assets/img/categories/02.jpg" alt="Acoutic guitar">
                             </div>
                             <div class="category-item__title">Electric</div>
                         </a>
                         <a href="#" class="category__item">
                             <div class="category__img">
-                                <img src="/assets/img/categories/03.jpg" alt="Acoutic guitar">
+                                <img src="assets/img/categories/03.jpg" alt="Acoutic guitar">
                             </div>
                             <div class="category-item__title">Basses</div>
                         </a>
                         <a href="#" class="category__item">
                             <div class="category__img">
-                                <img src="/assets/img/categories/04.jpg" alt="Acoutic guitar">
+                                <img src="assets/img/categories/04.jpg" alt="Acoutic guitar">
                             </div>
                             <div class="category-item__title">Collections</div>
                         </a>
@@ -197,14 +197,14 @@
                         <h2>Featuring the Best <span>Brands</span></h2>
                     </div>
                     <div class="feature__content">
-                        <div class="feature__brand"><img src="/assets/img/brands/gibsun.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/gretsch.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/ibanez.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/jakamine.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/martin&go.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/seagull.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/taylor.svg"></img></div>
-                        <div class="feature__brand"><img src="/assets/img/brands/tender.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/gibsun.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/gretsch.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/ibanez.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/jakamine.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/martin&go.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/seagull.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/taylor.svg"></img></div>
+                        <div class="feature__brand"><img src="assets/img/brands/tender.svg"></img></div>
                     </div>
                 </div>
             </section>
@@ -215,17 +215,17 @@
                     </div>
                     <div class="peculiarities__items">
                         <div class="peculiarities__item">
-                            <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/01.svg" alt=""></div>
+                            <div class="peculiarities__img"><img src="assets/img/icons/peculiarities/01.svg" alt=""></div>
                             <div class="peculiarities-item__title">Smooth Browsing</div>
                             <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                         </div>
                         <div class="peculiarities__item">
-                            <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/02.svg" alt=""></div>
+                            <div class="peculiarities__img"><img src="assets/img/icons/peculiarities/02.svg" alt=""></div>
                             <div class="peculiarities-item__title">EASY Delivery</div>
                             <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                         </div>
                         <div class="peculiarities__item">
-                            <div class="peculiarities__img"><img src="./assets/img/icons/peculiarities/03.svg" alt=""></div>
+                            <div class="peculiarities__img"><img src="assets/img/icons/peculiarities/03.svg" alt=""></div>
                             <div class="peculiarities-item__title">SwiFT PAYMENTS</div>
                             <div class="peculiarities-item__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                         </div>
@@ -240,7 +240,7 @@
                     <div class="reviews__swiper swiper-reviews swiper">
                         <div class="swiper-reviews__wrapper swiper-wrapper">
                           <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide"> 
-                            <div class="slide-swiper-reviews__img"><img src="/assets/img/costumers/costumer1.png" alt="Photo Author"></div>
+                            <div class="slide-swiper-reviews__img"><img src="assets/img/costumers/costumer1.png" alt="Photo Author"></div>
                             <div class="slide-swiper-reviews__body">
                                 <p class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</p>
                                 <div class="slide-swiper-reviews__author">
@@ -250,7 +250,7 @@
                             </div>
                           </div>
                           <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide"> 
-                            <div class="slide-swiper-reviews__img"><img src="/assets/img/costumers/costumer1.png" alt="Photo Author"></div>
+                            <div class="slide-swiper-reviews__img"><img src="assets/img/costumers/costumer1.png" alt="Photo Author"></div>
                             <div class="slide-swiper-reviews__body">
                                 <p class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</p>
                                 <div class="slide-swiper-reviews__author">
@@ -260,7 +260,7 @@
                             </div>
                           </div>
                           <div class="swiper-reviews__slide slide-swiper-reviews swiper-slide"> 
-                            <div class="slide-swiper-reviews__img"><img src="/assets/img/costumers/costumer1.png" alt="Photo Author"></div>
+                            <div class="slide-swiper-reviews__img"><img src="assets/img/costumers/costumer1.png" alt="Photo Author"></div>
                             <div class="slide-swiper-reviews__body">
                                 <p class="slide-swiper-reviews__text">“The Quality and Delivery is always on time, being a professional guitarist myself I love the customer service the brand provides, highly recommend Rhythm anytime.”</p>
                                 <div class="slide-swiper-reviews__author">
@@ -279,8 +279,8 @@
                     <div class="download__content">
                         <div class="download__title">Browse and buy your <span>favorite guitars</span> with Rhythm.</div>
                         <div class="download__app">
-                            <a href="#" class="download-app__img"><img src="./assets/img/platforms/google-play-store.png" alt="GooglePlay"></a>
-                            <a href="#" class="download-app__img"><img src="./assets/img/platforms/app-store.png" alt="AppleStore"></a>
+                            <a href="#" class="download-app__img"><img src="assets/img/platforms/google-play-store.png" alt="GooglePlay"></a>
+                            <a href="#" class="download-app__img"><img src="assets/img/platforms/app-store.png" alt="AppleStore"></a>
                         </div>
                     </div>
                     <div class="download__review">
@@ -295,7 +295,7 @@
             <div class="footer__container">
                 <div class="footer-main">
                     <div class="footer-main__head">
-                        <div class="footer__logo logo"><img src="/assets/img/logo.svg" alt="Rhythm"></div>
+                        <div class="footer__logo logo"><img src="assets/img/logo.svg" alt="Rhythm"></div>
                         <a href="#" class="footer__email email">Enquiry@Rhythm.com</a>
                         <a href="#" class="footer__location location">San Francisco</a>
                     </div>
